--- a/.github/workflows/SyncissuetoazureDO.yml
+++ b/.github/workflows/SyncissuetoazureDO.yml
@@ -15,9 +15,9 @@ jobs:
           ado_project: "AIpy"
           ado_area_path: "optional_area_path\\optional_area_path"
           ado_iteration_path: "optional_iteration_path\\optional_iteration_path"
-          ado_wit: "test"
+          ado_wit: "Issue"
           ado_new_state: "New"
           ado_active_state: "Open"
           ado_close_state: "Closed"
-          ado_bypassrules: true
+          ado_bypassrules: false
           log_level: 100
