--- a/.github/workflows/SyncissuetoazureDO.yml
+++ b/.github/workflows/SyncissuetoazureDO.yml
@@ -19,5 +19,5 @@ jobs:
           ado_new_state: "New"
           ado_active_state: "Open"
           ado_close_state: "Closed"
-          ado_bypassrules: false
+          ado_bypassrules: true
           log_level: 100
