--- a/.github/workflows/SyncissuetoazureDO.yml
+++ b/.github/workflows/SyncissuetoazureDO.yml
@@ -15,7 +15,7 @@ jobs:
           ado_project: "AIpy"
           ado_area_path: "optional_area_path\\optional_area_path"
           ado_iteration_path: "optional_iteration_path\\optional_iteration_path"
-          ado_wit: "Issues"
+          ado_wit: "To Do"
           ado_new_state: "New"
           ado_active_state: "Open"
           ado_close_state: "Closed"
