--- a/.github/workflows/SyncissuetoazureDO.yml
+++ b/.github/workflows/SyncissuetoazureDO.yml
@@ -1,23 +1,2 @@
-on:
-  issues:
-    types:
-      [opened, edited, deleted, closed, reopened, labeled, unlabeled, assigned]
-
-jobs:
-  alert:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: danhellem/github-actions-issue-to-work-item@master
-        env:
-          ado_token: "${{ secrets.ADO_PERSONAL_ACCESS_TOKEN }}"
-          github_token: "${{ secrets.GH_PERSONAL_ACCESS_TOKEN }}"
-          ado_organization: "joussemetmathis"
-          ado_project: "AIpy"
-          ado_area_path: ""
-          ado_iteration_path: "optional_iteration_path\\optional_iteration_path"
-          ado_wit: "Issue"
-          ado_new_state: "New"
-          ado_active_state: "Open"
-          ado_close_state: "Closed"
-          ado_bypassrules: true
-          log_level: 100
+- name: GitHub Issues to Azure DevOps
+  uses: danhellem/github-actions-issue-to-work-item@1.9
